--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "./dist/index.js",
   "type": "module",
   "scripts": {
+    "docs:dev": "vuepress dev docs",
+    "docs:build": "vuepress build docs",
     "prestart": "tsc",
     "start": "node ."
   },
@@ -20,10 +22,12 @@
   "license": "ISC",
   "devDependencies": {
     "@cloudflare/workers-types": "^3.11.0",
+    "@discord-message-components/vue": "^0.2.1",
     "@octokit/webhooks-types": "^5.6.0",
     "discord-api-types": "^0.32.1",
     "discord.js": "^13.7.0",
-    "typescript": "^4.7.2"
+    "typescript": "^4.7.2",
+    "vuepress": "^2.0.0-beta.46"
   },
   "files": [
     "dist"
