--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "type": "module",
   "scripts": {
     "docs:dev": "vuepress dev docs",
-    "docs:build": "node ./scripts/esm.js && vuepress build docs",
+    "docs:build": "npm run docs:update && node ./scripts/esm.js && vuepress build docs",
+    "docs:update": "npx typedoc --entryPoints ./src --json dist/docs.json && npm run scripts:docs",
     "scripts:handler": "node ./scripts/handler.js",
+    "scripts:docs": "node --experimental-json-modules ./scripts/docs.js",
     "prestart": "tsc",
     "start": "node ."
   },
@@ -32,11 +34,13 @@
   "devDependencies": {
     "@cloudflare/workers-types": "^3.11.0",
     "@discord-message-components/vue": "^0.2.1",
-    "@octokit/webhooks-types": "^5.6.0",
-    "discord-api-types": "^0.33.5",
+    "@octokit/webhooks-schemas": "^5.8.0",
+    "@octokit/webhooks-types": "^5.8.0",
+    "discord-api-types": "^0.34.0",
     "discord.js": "^13.8.0",
-    "typescript": "^4.7.3",
-    "vuepress": "^2.0.0-beta.46"
+    "typedoc": "^0.22.17",
+    "typescript": "^4.7.4",
+    "vuepress": "^2.0.0-beta.48"
   },
   "files": [
     "dist"
